--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -1,16 +1,11 @@
-@use "../global/color-vars.scss" as colors;
+@import "../global/color-vars.scss";
+@import "../global/animations";
 
 /* 
  * Page specific styles
  */
 .about-background-container {
-  background: linear-gradient(
-    135deg,
-    colors.$bright-yellow 0%,
-    colors.$light-light-blue 1%,
-    colors.$light-blue 95%,
-    colors.$sky-blue 100%
-  );
+  background: linear-gradient(135deg, $bright-yellow 0%, $light-light-blue 1%, $light-blue 95%, $sky-blue 100%);
 }
 
 .about-page-container {
