--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -231,9 +231,11 @@
   color: white;
   font-family: Lato-Regular, Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
-  max-width: 65ch;
+  max-width: 70ch;
   padding: 2rem;
   margin-bottom: max(2rem, 3vh);
+  line-height: 1.6;
+  text-wrap: pretty;
 
   @media (max-width: 768px) {
     font-size: 1.2rem;
